--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "beautifulsoup4",
     "matplotlib",
+    "pytest",
     "pyyaml",
     "requests",
 ]
