--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,22 +28,11 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          version: "latest"
-
-      - name: Install backend deps
-        run: uv sync
-
-      - name: Run ETL to refresh derived data
-        run: uv run python etl.py all
-
       - name: Install frontend deps
         working-directory: frontend
         run: npm ci
 
-      - name: Sync data into frontend public
+      - name: Sync data into frontend public (assumes data/derived committed)
         working-directory: frontend
         run: npm run sync-data
 
