--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,11 +28,20 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Install backend deps
+        run: uv sync
+
+      - name: Run ETL to refresh derived data
+        run: uv run python etl.py all
+
       - name: Install frontend deps
         working-directory: frontend
         run: npm ci
 
-      - name: Sync data into frontend public (assumes data/derived committed)
+      - name: Sync data into frontend public
         working-directory: frontend
         run: npm run sync-data
 
