--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ frontend/node_modules/
 frontend/dist/
 frontend/.vite/
 data/raw/posts-*.jsonl
+data/raw/comments-*.jsonl
+data/raw/comments-latest.jsonl
