--- a/.github/workflows/data-refresh.yml
+++ b/.github/workflows/data-refresh.yml
@@ -29,12 +29,14 @@ jobs:
           uv run python etl.py fetch
           # Copy newest raw to latest.jsonl
           python - <<'PY'
-import shutil, pathlib, time
-raw_dir = pathlib.Path("data/raw")
-files = sorted(raw_dir.glob("posts-*.jsonl"), reverse=True)
-if files:
-    shutil.copy(files[0], raw_dir / "latest.jsonl")
-PY
+          import shutil
+          import pathlib
+
+          raw_dir = pathlib.Path("data/raw")
+          files = sorted(raw_dir.glob("posts-*.jsonl"), reverse=True)
+          if files:
+              shutil.copy(files[0], raw_dir / "latest.jsonl")
+          PY
           uv run python etl.py build --with-comment-analysis
 
       - name: Commit updated data
