--- a/.github/workflows/data-refresh.yml
+++ b/.github/workflows/data-refresh.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -55,7 +56,19 @@ jobs:
             exit 0
           fi
           git commit -m "Refresh derived data"
-          # Avoid non-fast-forward failures if main advanced during the job
-          git fetch origin main
-          git rebase origin/main
-          git push
+          # Avoid non-fast-forward failures if main advanced during the job.
+          # Retry a few times to handle concurrent pushes.
+          for attempt in 1 2 3 4 5; do
+            echo "Push attempt ${attempt}…"
+            git fetch origin main
+            if ! git rebase origin/main; then
+              git rebase --abort || true
+              exit 1
+            fi
+            if git push; then
+              exit 0
+            fi
+            sleep $((attempt * 3))
+          done
+          echo "Failed to push after retries."
+          exit 1
