--- a/.github/workflows/data-refresh.yml
+++ b/.github/workflows/data-refresh.yml
@@ -5,6 +5,10 @@ on:
   schedule:
     - cron: "0 6 * * *" # daily at 06:00 UTC
 
+concurrency:
+  group: data-refresh
+  cancel-in-progress: false
+
 permissions:
   contents: write
 
