--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 .venv/
+.env
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
 data/raw/posts-*.jsonl
 data/raw/comments-*.jsonl
 data/raw/comments-latest.jsonl
+data/llm_cache/
+data/derived/llm_*.json
+!data/derived/llm_tags.json
+!data/derived/llm_judged_tags.json
+data/derived/llm_tags.jsonl
+data/derived/llm_judged_tags.jsonl
+frontend/public/data/derived/llm_*.json
+frontend/public/data/derived/llm_tags.jsonl
+frontend/public/data/derived/llm_judged_tags.jsonl
