Make LLM tagging workflow resume

--- a/.github/workflows/llm-tagging.yml
+++ b/.github/workflows/llm-tagging.yml
@@ -75,7 +75,7 @@ jobs:
             --model "${{ inputs.model }}" \
             --judge \
             --workers "${{ inputs.workers }}" \
-            --overwrite
+            --resume
 
       - name: Commit LLM outputs
         env:
